fix: gutter alignment and height estimation problems

--- a/src/assets/comment-gutter.scss
+++ b/src/assets/comment-gutter.scss
@@ -9,9 +9,6 @@
 
 .criticmarkup-comment-gutter {
 	width: 100%;
-
-	// TODO: margin-top determines the title height of the note
-	margin-top: 50px;
 	transition: width 200ms ease-in-out;
 }
 
